--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "budgetbot",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,11 +8,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.0.0-rc.5",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "google-auth-library": "^0.9.8",
     "googleapis": "^11.0.0",
+    "install": "^0.8.1",
     "node-wit": "^4.0.0",
+    "npm": "^3.10.5",
     "request": "^2.73.0"
-  }
+  },
+  "description": ""
 }
